syntax = "proto3";

package institution;

option go_package = "pb/institution";

service InstitutionService {
    rpc RegisterInstitution(RegisterInstitutionRequest) returns (InstitutionResponse) {}
    rpc LoginInstitution(LoginInstitutionRequest) returns (LoginInstitutionResponse) {}
    
    rpc GetInstitutionByID(GetInstitutionByIDRequest) returns (InstitutionResponse) {}
    rpc GetInstitutionByEmail(GetInstitutionByEmailRequest) returns (InstitutionResponse) {}
    rpc UpdateInstitution(UpdateInstitutionRequest) returns (InstitutionResponse) {}
    rpc DeleteInstitution(DeleteInstitutionRequest) returns (DeleteInstitutionResponse) {}
}

message RegisterInstitutionRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string address = 4;
    string phone = 5;
    string website = 6;
}

message LoginInstitutionRequest {
    string email = 1;
    string password = 2;
}

message GetInstitutionByIDRequest {
    string institution_id = 1;
}

message GetInstitutionByEmailRequest {
    string email = 1;
}

message UpdateInstitutionRequest {
    string institution_id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string address = 5;
    string phone = 6;
    string website = 7;
}

message DeleteInstitutionRequest {
    string institution_id = 1;
}

message InstitutionResponse {
    string institution_id = 1;
    string name = 2;
    string email = 3;
}

message LoginInstitutionResponse {
    string token = 1;
}

message DeleteInstitutionResponse {
    string message = 1;
}